--- a/create.html
+++ b/create.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/public/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <title>Create Post</title>
+  </head>
+  <body>
+    <div class="toggler">
+      <span id="openNav"> &#9776; Menu</span>
+    </div>
+    <nav class="sidenav">
+      <ul>
+        <li>
+          <h2>Firebase App</h2>
+        </li>
+        <a href="#" class="closebtn" id="closeNav">&times;</a>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </nav>
+
+    <header>
+      <h1>Create a New Post</h1>
+    </header>
+
+    <main id="main">
+      <form method="POST" id="createForm" action="post.html">
+        <p>Fill the respective forms to create a new post</p>
+        <input type="text" id="title" placeholder="Post Title" />
+        <textarea
+          id="content"
+          cols="30"
+          rows="10"
+          placeholder="Post Content"
+        ></textarea>
+        <input type="file" id="postImage" accept="image/x-png,image/jpeg" />
+        <input type="submit" name="" id="postSubmit" value="Submit" />
+      </form>
+      <div id="progressHandler">
+        <p>Processing request...</p>
+        <progress id="progressBar" value="" max="100"></progress>
+      </div>
+    </main>
+
+    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-storage-compat.js"></script>
+
+    <script src="./functions/main.js"></script>
+  </body>
 </html>
