--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./public/main.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <title>Firebase App</title>
   </head>
   <body>
-    <span id="openNav"> &#9776; Menu</span>
+    <div class="toggler">
+      <span id="openNav"> &#9776; Menu</span>
+    </div>
     <nav class="sidenav">
       <ul>
         <li>
@@ -27,37 +35,9 @@
       <div id="posts"></div>
     </main>
 
-    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-firestore.js"></script>
-    <script>
-      const firebaseApp = firebase.initializeApp({
-        apiKey: "AIzaSyCEVsUFIsT74A_dTl8UaCMyJmxBMtRDwyY",
-        authDomain: "freelance-trial.firebaseapp.com",
-        projectId: "freelance-trial",
-        storageBucket: "freelance-trial.appspot.com",
-        messagingSenderId: "333533410713",
-        appId: "1:333533410713:web:0553e41275ed7d78a10f08",
-        measurementId: "G-YLPPNTZZTC",
-      });
-      const db = firebaseApp.firestore();
-      const auth = firebaseApp.auth();
-    </script> -->
     <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-auth-compat.js"></script>
-    <!-- <script>
-      const firebaseApp = firebase.initializeApp({
-        apiKey: "AIzaSyCEVsUFIsT74A_dTl8UaCMyJmxBMtRDwyY",
-        authDomain: "freelance-trial.firebaseapp.com",
-        projectId: "freelance-trial",
-        storageBucket: "freelance-trial.appspot.com",
-        messagingSenderId: "333533410713",
-        appId: "1:333533410713:web:0553e41275ed7d78a10f08",
-        measurementId: "G-YLPPNTZZTC",
-      });
-      const db = firebaseApp.firestore();
-      const auth = firebaseApp.auth();
-    </script> -->
     <script src="./functions/main.js"></script>
   </body>
 </html>
