Navigation and Retrieving Posts

--- a/create.html
+++ b/create.html
@@ -17,13 +17,14 @@
     <div class="toggler">
       <span id="openNav"> &#9776; Menu</span>
     </div>
-    <nav class="sidenav">
+    <nav id="nav" class="sidenav">
       <ul>
+        <h2>Firebase App</h2>
+        <a href="#" class="closebtn" id="closeNav">&times; </a>
+
         <li>
-          <h2>Firebase App</h2>
+          <a href="index.html">Home</a>
         </li>
-        <a href="#" class="closebtn" id="closeNav">&times;</a>
-        <li><a href="index.html">Home</a></li>
       </ul>
     </nav>
 
