--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
     <div class="toggler">
       <span id="openNav"> &#9776; Menu</span>
     </div>
-    <nav class="sidenav">
+    <nav id="nav" class="sidenav">
       <ul>
+        <h2>Firebase App</h2>
+        <a href="#" class="closebtn" id="closeNav">&times; </a>
+
         <li>
-          <h2>Firebase App</h2>
+          <a href="create.html">New Post</a>
         </li>
-        <a href="#" class="closebtn" id="closeNav">&times;</a>
-        <li><a href="create.html">New Post</a></li>
       </ul>
     </nav>
 
     <header>
-      <h1>Firebase App</h1>
+      <h1>Home Page</h1>
     </header>
 
     <main id="main">
