editForm edited in post.html

--- a/create.html
+++ b/create.html
@@ -34,7 +34,7 @@
 
     <main id="main">
       <form method="POST" id="createForm" action="post.html">
-        <p>Fill the respective forms to create a new post</p>
+        <p>Fill the respective fields to create a new post</p>
         <input type="text" id="title" placeholder="Post Title" />
         <br />
         <br />
