changed "posts" collection to "stories"

--- a/create-story.html
+++ b/create-story.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Poppins:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>Create Post</title>
+    <title>Create Property Story</title>
   </head>
   <body>
     <div class="toggler">
@@ -29,20 +29,20 @@
     </nav>
 
     <header>
-      <h1>Create a New Post</h1>
+      <h1>Create a New Property Story</h1>
     </header>
 
     <main id="main">
       <form method="POST" id="createForm" action="post.html">
-        <p>Fill the respective fields to create a new post</p>
-        <input type="text" id="title" placeholder="Post Title" />
+        <p>Fill the respective fields to create a new story</p>
+        <input type="text" id="title" placeholder="Propery Story Title" />
         <br />
         <br />
         <textarea
           id="content"
           cols="30"
           rows="10"
-          placeholder="Post Content"
+          placeholder="Property Story Content"
         ></textarea>
         <br />
         <br />
