--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#" class="closebtn" id="closeNav">&times; </a>
 
         <li>
-          <a href="create.html">New Post</a>
+          <a href="create-story.html">New Propery Story</a>
         </li>
       </ul>
     </nav>
