--- a/post.html
+++ b/post.html
@@ -25,7 +25,7 @@
           <a href="index.html">Home Page</a>
         </li>
         <li>
-          <a href="create.html">New Post</a>
+          <a href="create-story.html">New Property Story</a>
         </li>
       </ul>
     </nav>
