--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
         <li>
           <a href="create-story.html">New Propery Story</a>
         </li>
+
+        <li>
+          <a href="create-sale.html">New Propery for Sale</a>
+        </li>
       </ul>
     </nav>
 
     <header>
       <h1>Home Page</h1>
     </header>
+
+    <main id="main">
+      <div id="posts"></div>
+    </main>
 
     <main id="main">
       <div id="posts"></div>
